# mk8d-random

./: .gitignore  Cargo.toml  flake.nix  list.pkl  main.py  old_main.py
data/: mk8d_default_save.json
lists/: mk8d.py
saves/: mk8d.json  mk8d.pkl
src/: CourseClass.py  CourseListClass.py  LoadSave.py  ScanLists.py  ScanSaves.py  app.rs  courses.rs  lib.rs  main.rs  repl.rs  ui.rs  utils.rs
src/courses/: course.rs  course_list.rs  history.rs  mod.rs
src/lists/: mk8d.rs  mod.rs
src/templates/: mk8d.rs
src/tui/: app.rs  mod.rs  tui.rs  ui.rs
