[package]
name = "mk8d-random"
version = "0.1.0"
edition = "2024"

[dependencies]
my_lib = { git = "https://github.com/UserOfNames/my_rust_lib.git" }
clap = { version = "4.5.41", features = ["derive"] }
dirs = "6.0.0"
rand = "0.9.1"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
